--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="google-site-verification" content="HZ8_E0NBRdcLmm4qUthhILriyUrBvYzlCJmacBFTSAU" />
+    <meta name="description" content="Hello I am Rajesh Poonia from Baniyala. I am Special Educator at Punjab">
+    <meta name="keywords" content="digital marketing, social media marketing, freelancer, ajasthan, india, special education, rajesh poonia, baniyala poonia, rajesh, churu, taranagar, Baniyala Churu, Rajasthan  ">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
         integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
     <title>Rajesh Poonia | Personal Portfolio</title>
