--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="google-site-verification" content="HZ8_E0NBRdcLmm4qUthhILriyUrBvYzlCJmacBFTSAU" />
-    <meta name="description" content="Hello I am Rajesh Poonia from Baniyala. I am Special Educator at Punjab">
-    <meta name="keywords" content="digital marketing, social media marketing, freelancer, ajasthan, india, special education, rajesh poonia, baniyala poonia, rajesh, churu, taranagar, Baniyala Churu, Rajasthan  ">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
         integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
+
+    <script async defer crossorigin="anonymous" src="https://connect.facebook.net/hi_IN/sdk.js#xfbml=1&version=v8.0"
+        nonce="lzX7E7S8"></script>
     <title>Rajesh Poonia | Personal Portfolio</title>
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="/css/style.css">
 </head>
 <body>
     <div class="header">
@@ -93,26 +93,11 @@
 
     <section class="work" id="work">
         <div class="heading">
-            <h2>Our Latest Work</h2>
+            <h2>Like Our Facebook Page</h2>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.!</p>
         </div>
-        <div class="content">
-            <div class="workBx">
-                <img src="images/product1.jpg">
-            </div>
-            <div class="workBx">
-                <img src="images/product2.jpg">
-            </div>
-            <div class="workBx">
-                <img src="images/product3.jpg">
-            </div>
-            <div class="workBx">
-                <img src="images/product4.jpg">
-            </div>
-        </div>
-        <div class="heading">
-            <a href="#" class="btn">View More</a>
-        </div>
+
+        <iframe src="https://www.facebook.com/plugins/page.php?href=https%3A%2F%2Fwww.facebook.com%2Frajeshpoonia80%2F&tabs=timeline&width=500&height=700&small_header=false&adapt_container_width=true&hide_cover=false&show_facepile=true&appId" frameborder="0" id="frame"></iframe>
     </section>
 
     <section class="testimonial" id="testimonials">
@@ -160,7 +145,9 @@
                         </div>
                         <div class="text">
                             <h3>Phone</h3>
-                            <a href="tel:+917877950506"><p>7877950506</p></a>
+                            <a href="tel:+917877950506">
+                                <p>7877950506</p>
+                            </a>
                         </div>
                     </div>
                     <div class="box">
