--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                     vero, at nostrum, totam error laborum pariatur id reiciendis veniam? Animi, aspernatur!</p>
             </div>
             <div class="w50">
-                <img src="images/img1.jpg" class="img">
+                <img src="images/rajeshpoonia.jpg" class="img resize">
             </div>
         </div>
     </section>
