--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <section class="banner" id="home">
         <div class="textBx">
             <h2>Hello I am<br><span>Rajesh Poonia.</span></h2>
-            <h3>I am a Frontend Developer.</h3>
+            <h3>Special Educator</h3>
             <a href="#about" class="btn">About Me</a>
         </div>
     </section>
@@ -37,7 +37,7 @@
         </div>
         <div class="content">
             <div class="contentBx w50">
-                <h3>I am a Frontend Developer.</h3>
+                <h3>I am special educator at JSS ASHAKIRAN Special School &amp; Teacher&#039;s Training Institute</h3>
                 <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quasi ipsum, facilis porro, mollitia
                     ducimus cumque veritatis non ipsam modi placeat consequatur delectus natus corporis esse. Aliquam
                     necessitatibus dicta perspiciatis quasi!br <br> <br> Lorem ipsum dolor sit amet consectetur
@@ -93,7 +93,7 @@
 
     <section class="work" id="work">
         <div class="heading">
-            <h2>Like Our Facebook Page</h2>
+            <h2>Like my facebook page</h2>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.!</p>
         </div>
 
