--- a/index.html
+++ b/index.html
@@ -3,9 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="https://www.google.com/recaptcha/api.js" async defer></script>
+    <script src="https://www.google.com/recaptcha/api.js?onload=onloadCallback&render=explicit"
+    async defer></script>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
         integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
-
     <script async defer crossorigin="anonymous" src="https://connect.facebook.net/hi_IN/sdk.js#xfbml=1&version=v8.0"
         nonce="lzX7E7S8"></script>
     <title>Rajesh Poonia | Personal Portfolio</title>
@@ -27,7 +29,7 @@
     <section class="banner" id="home">
         <div class="textBx">
             <h2>Hello I am<br><span>Rajesh Poonia.</span></h2>
-            <h3>Special Educator</h3>
+            <h3>I am a Frontend Developer.</h3>
             <a href="#about" class="btn">About Me</a>
         </div>
     </section>
@@ -37,7 +39,7 @@
         </div>
         <div class="content">
             <div class="contentBx w50">
-                <h3>I am special educator at JSS ASHAKIRAN Special School &amp; Teacher&#039;s Training Institute</h3>
+                <h3>I am a Frontend Developer.</h3>
                 <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quasi ipsum, facilis porro, mollitia
                     ducimus cumque veritatis non ipsam modi placeat consequatur delectus natus corporis esse. Aliquam
                     necessitatibus dicta perspiciatis quasi!br <br> <br> Lorem ipsum dolor sit amet consectetur
@@ -93,7 +95,7 @@
 
     <section class="work" id="work">
         <div class="heading">
-            <h2>Like my facebook page</h2>
+            <h2>Like Our Facebook Page</h2>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.!</p>
         </div>
 
@@ -170,6 +172,7 @@
                     <input type="text" placeholder="Full Name" id="name">
                     <input type="email" placeholder="Email" id="email">
                     <textarea id="message" placeholder="Your Message"></textarea>
+                    <div class="g-recaptcha" data-sitekey="6LfQNroZAAAAAKNq77LIrWz8CDNBxCbl34TgoKIJ"></div>
                     <input type="submit" value="Send">
                 </form>
                 <h1 id="feedback">Thanks I'll contact you soon</h1>
@@ -181,6 +184,10 @@
         <p>Copyright &copy; 2020 <a href="https://devendra.ga" target="_blank">Devendra Poonia.</a> All Rights Reserved
         </p>
     </div>
+    <script type="text/javascript">
+        var onloadCallback = function() {
+        };
+      </script>
     <script src="js/jquery-3.5.1.min.js"></script>
     <script src="js/index.js"></script>
 </body>
