--- a/index.html
+++ b/index.html
@@ -39,14 +39,15 @@
         </div>
         <div class="content">
             <div class="contentBx w50">
-                <h3>I am a Frontend Developer.</h3>
-                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quasi ipsum, facilis porro, mollitia
+                <h3>I am Special Educator.</h3>
+                <!-- <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quasi ipsum, facilis porro, mollitia
                     ducimus cumque veritatis non ipsam modi placeat consequatur delectus natus corporis esse. Aliquam
                     necessitatibus dicta perspiciatis quasi!br <br> <br> Lorem ipsum dolor sit amet consectetur
                     adipisicing elit. Quos quas praesentium, id inventore, ex quae eligendi non rerum sapiente
                     blanditiis pariatur debitis odit qui. Nemo illo sit dolorum similique ad. Lorem ipsum dolor sit amet
                     consectetur adipisicing elit. Quasi est cum architecto odio non fugit consequatur doloremque sit
                     vero, at nostrum, totam error laborum pariatur id reiciendis veniam? Animi, aspernatur!</p>
+                 -->
             </div>
             <div class="w50">
                 <img src="images/rajeshpoonia.jpg" class="img resize">
@@ -54,7 +55,7 @@
         </div>
     </section>
 
-    <section class="services" id="services">
+   <!-- <section class="services" id="services">
         <div class="heading white">
             <h2>Services</h2>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
@@ -92,7 +93,7 @@
             </div>
         </div>
     </section>
-
+-->
     <section class="work" id="work">
         <div class="heading">
             <h2>Like Our Facebook Page</h2>
