--- a/index.html
+++ b/index.html
@@ -20,10 +20,10 @@
         <ul class="menu">
             <li><a href="#home">Home</a></li>
             <li><a href="#about">About</a></li>
-            <li><a href="#services">Services</a></li>
+          <!--  <li><a href="#services">Services</a></li> -->
             <li><a href="#work">Facebook Page</a></li>
-            <li><a href="#testimonials">Testimonials</a></li>
-            <li><a href="#contact">Contact</a></li>
+          <!--  <li><a href="#testimonials">Testimonials</a></li> -->
+            <li><a href="#contact">Contact Me</a></li>
         </ul>
     </div>
     <section class="banner" id="home">
@@ -40,14 +40,8 @@
         <div class="content">
             <div class="contentBx w50">
                 <h3>I am Special Educator.</h3>
-                <!-- <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quasi ipsum, facilis porro, mollitia
-                    ducimus cumque veritatis non ipsam modi placeat consequatur delectus natus corporis esse. Aliquam
-                    necessitatibus dicta perspiciatis quasi!br <br> <br> Lorem ipsum dolor sit amet consectetur
-                    adipisicing elit. Quos quas praesentium, id inventore, ex quae eligendi non rerum sapiente
-                    blanditiis pariatur debitis odit qui. Nemo illo sit dolorum similique ad. Lorem ipsum dolor sit amet
-                    consectetur adipisicing elit. Quasi est cum architecto odio non fugit consequatur doloremque sit
-                    vero, at nostrum, totam error laborum pariatur id reiciendis veniam? Animi, aspernatur!</p>
-                 -->
+                <p>I am Rajesh Poonia from Baniyala. I am Special Educator at Punjab.</p>
+                 
             </div>
             <div class="w50">
                 <img src="images/rajeshpoonia.jpg" class="img resize">
@@ -102,7 +96,7 @@
 
         <iframe src="https://www.facebook.com/plugins/page.php?href=https%3A%2F%2Fwww.facebook.com%2Frajeshpoonia80%2F&tabs=timeline&width=500&height=700&small_header=false&adapt_container_width=true&hide_cover=false&show_facepile=true&appId" frameborder="0" id="frame"></iframe>
     </section>
-
+<!--
     <section class="testimonial" id="testimonials">
         <div class="heading">
             <h2>Testimonial</h2>
@@ -123,6 +117,8 @@
             </div>
         </div>
     </section>
+
+-->
     <section class="contact" id="contact">
         <div class="heading white">
             <h2>Contact Me</h2>
