--- a/index.html
+++ b/index.html
@@ -44,8 +44,9 @@
         </div>
         <div class="content">
             <div class="contentBx w50">
-                <h3>I am Special Educator.</h3>
-                <p>I am Rajesh Poonia from Baniyala. I am Special Educator at Punjab.</p>
+                <h3>Special Educator.</h3>
+                <p>I am Rajesh Poonia from Baniyala. I am Special Educator at Punjab and
+                Social Worker.</p>
                  
             </div>
             <div class="w50">
@@ -127,7 +128,7 @@
     <section class="contact" id="contact">
         <div class="heading white">
             <h2>Contact Me</h2>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.!</p>
+            <!--<p> adipisicing elit.!</p>-->
         </div>
 
         <div class="content">
