--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
     </div>
     <section class="banner" id="home">
         <div class="textBx">
-            <h2>Hello I am<br><span>Rajesh Poonia.</span></h2>
-            <h3>I am a Frontend Developer.</h3>
+            <h2>Hello I<br><span>Rajesh Poonia.</span></h2>
+            <h3>Frontend Developer.</h3>
             <a href="#about" class="btn">About Me</a>
         </div>
     </section>
@@ -45,7 +45,7 @@
         <div class="content">
             <div class="contentBx w50">
                 <h3>Special Educator.</h3>
-                <p>I am Rajesh Poonia from Baniyala. I am Special Educator at Punjab and
+                <p>Rajesh Poonia from Baniyala. Special Educator at Punjab and
                 Social Worker.</p>
                  
             </div>
@@ -97,7 +97,7 @@
     <section class="work" id="work">
         <div class="heading">
             <h2>Like Our Facebook Page</h2>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.!</p>
+           <!-- <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.!</p> -->
         </div>
 
         <iframe src="https://www.facebook.com/plugins/page.php?href=https%3A%2F%2Fwww.facebook.com%2Frajeshpoonia80%2F&tabs=timeline&width=500&height=700&small_header=false&adapt_container_width=true&hide_cover=false&show_facepile=true&appId" frameborder="0" id="frame"></iframe>
