--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta property="og:description" content="Rajesh Poonia, Special Educator at Punjab" />
     <meta name="keywords"
-    content="rajesh poonia, rajesh Poonia baniyala, special education, baniyala, churu, rajasthan, Punjab, JSS, ward no.7, rajesh poonia, rajesh poonia, Rajasthan, india ">
+    content="rajesh, rajesh Poonia baniyala, special education, baniyala, churu, rajasthan, Punjab, JSS, ward no.7, rajesh poonia, rajesh poonia, Rajasthan, india ">
     <meta name="author" content="Rajesh Poonia">
     <meta property="og:site_name" content="Rajesh Poonia" /> 
     <script src="https://www.google.com/recaptcha/api.js" async defer></script>
