--- a/index.html
+++ b/index.html
@@ -17,6 +17,25 @@
         nonce="lzX7E7S8"></script>
     <title>Rajesh Poonia | Personal Portfolio</title>
     <link rel="stylesheet" href="/css/style.css">
+    <script type='application/ld+json'> 
+{
+  "@context": "http://www.schema.org",
+  "@type": "person",
+  "name": "Rajesh Poonia",
+  "jobTitle": "Special Educator",
+  "url": "https://rajeshpoonia.cf",
+  "address": {
+    "@type": "PostalAddress",
+    "streetAddress": "viilage baniyala ward no. 7",
+    "addressLocality": "sahawa",
+    "addressRegion": "rajasthan",
+    "postalCode": "331303",
+    "addressCountry": "India"
+  },
+  "email": "rajeshpoonia80@gmail.com",
+  "telephone": "7877950506"
+}
+ </script>
 </head>
 <body>
     <div class="header">
