--- a/index.html
+++ b/index.html
@@ -69,81 +69,19 @@
                  
             </div>
             <div class="w50">
-                <img src="images/rajeshpoonia.jpg" class="img resize">
+                <img src="images/rajeshpoonia.jpg" class="img resize" alt="Rajesh Poonia">
             </div>
         </div>
     </section>
 
-   <!-- <section class="services" id="services">
-        <div class="heading white">
-            <h2>Services</h2>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
-        </div>
-        <div class="content">
-            <div class="serviceBx">
-                <img src="images/icon1.png">
-                <h2>Web Design</h2>
-                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quo itaque corrupti soluta.</p>
-            </div>
-            <div class="serviceBx">
-                <img src="images/icon2.png">
-                <h2>Web Development</h2>
-                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quo itaque corrupti soluta.</p>
-            </div>
-            <div class="serviceBx">
-                <img src="images/icon3.png">
-                <h2>Android App</h2>
-                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quo itaque corrupti soluta.</p>
-            </div>
-            <div class="serviceBx">
-                <img src="images/icon4.png">
-                <h2>Photography</h2>
-                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quo itaque corrupti soluta.</p>
-            </div>
-            <div class="serviceBx">
-                <img src="images/icon5.png">
-                <h2>Content Writing</h2>
-                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quo itaque corrupti soluta.</p>
-            </div>
-            <div class="serviceBx">
-                <img src="images/icon6.png">
-                <h2>Video Editing</h2>
-                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quo itaque corrupti soluta.</p>
-            </div>
-        </div>
-    </section>
--->
     <section class="work" id="work">
         <div class="heading">
             <h2>Like Our Facebook Page</h2>
-           <!-- <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.!</p> -->
-        </div>
+         </div>
 
         <iframe src="https://www.facebook.com/plugins/page.php?href=https%3A%2F%2Fwww.facebook.com%2Frajeshpoonia80%2F&tabs=timeline&width=500&height=700&small_header=false&adapt_container_width=true&hide_cover=false&show_facepile=true&appId" frameborder="0" id="frame"></iframe>
     </section>
-<!--
-    <section class="testimonial" id="testimonials">
-        <div class="heading">
-            <h2>Testimonial</h2>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.!</p>
-        </div>
-        <div class="content">
-            <div class="testimonialBx">
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus nesciunt reiciendis qui, iste, quod
-                    possimus facilis quibusdam ratione cupiditate maiores, facere harum nulla quo. Ipsum eligendi
-                    assumenda cumque voluptatibus omnis?</p>
-                <h3>Someone Famous<br><span>Creative Designer</span></h3>
-            </div>
-            <div class="testimonialBx">
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus nesciunt reiciendis qui, iste, quod
-                    possimus facilis quibusdam ratione cupiditate maiores, facere harum nulla quo. Ipsum eligendi
-                    assumenda cumque voluptatibus omnis?</p>
-                <h3>Someone Famous<br><span>Creative Designer</span></h3>
-            </div>
-        </div>
-    </section>
 
--->
     <section class="contact" id="contact">
         <div class="heading white">
             <h2>Contact Me</h2>
